<resources>
    <string name="app_name">Kleanny</string>
    <string name="loading">Cargando...</string>

    <!--fragment_register_step1-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="repeat_password">Repetir contraseña</string>
    <string name="create_account">Crear cuenta</string>
    <string name="error_password">Tu contraseña contiene menos de 8 carácteres o no coincide</string>
    <string name="error_email">Tu e-mail no es válido</string>
    <!--fragment_register_step1-->

    <!--fragment_register_step2-->
    <string name="dni">Número de Documento</string>
    <string name="name">Nombre</string>
    <string name="first_last_name">Primer apellido</string>
    <string name="second_last_name">Segundo apellido</string>
    <string name="address">Dirección</string>
    <string name="terms_and_conditions">He leído y acepto los Términos y condiciones de uso.</string>
    <string name="continue_button">Continuar</string>
    <!--fragment_register_step2-->

    <!--fragment_register_step3-->
    <string name="phone_number">Teléfono</string>
    <string name="add_validation_code">Agrega tu código de validación</string>
    <string name="validation_code">Código de validación</string>
    <string name="code_not_received">No recibí ningún código</string>
    <!--fragment_register_step2-->

    <!--fragment_login-->
    <string name="login_text">Login</string>
    <string name="input_email">e-mail</string>
    <string name="input_password">Contraseña</string>
    <string name="text_sign_up">¿No estas registrado? ¡Únete!</string>
    <!--fragment_login-->

    <!--items your visits-->
    <string name="your_score">Tu Puntuación</string>
    <string name="distance">DISTANCIA</string>
    <string name="privacy_policy">Aviso de Privacidad</string>
    <!--items your visits-->

    <!--fragment_faq-->
    <string name="faq_title">Preguntas Frecuentes</string>
    <string name="faq1">Olvidé mi clave o perdí mi dispositivo Android, ¿Qué debo hacer?</string>
    <string name="faq2">¿Qué puedo vender desde esta aplicación para minoristas?</string>
    <string name="faq3">Además de vender, ¿qué otras funciones puedo hacer a través de esta aplicación?</string>
    <string name="faq4">¿Para qué sirve la opción de Inactividad?</string>
    <string name="faq_mail">Correo</string>
    <string name="faq_call">Llamar</string>
    <!--fragment_faq-->

    <!--fragment_settings-->
    <string name="change_password">Cambiar Contraseña</string>
    <string name="finger_print">Huella digital</string>
    <string name="auth_biometrics_finger">Autorizar operaciones con biométricos</string>
    <!--fragment_settings-->

    <!--fragment_change_password-->
    <string name="current_password">Contraseña actual</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="repeat_new_password">Confirmar nueva contraseña</string>
    <string name="accept">Aceptar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_visits">Mis Visitas</string>
    <string name="menu_account">Mis Datos</string>
    <string name="menu_privacy">Privacidad</string>
    <string name="menu_help">Ayuda</string>
    <string name="menu_settings">Configuracion</string>
    <string name="menu_rewards">Mis Recompensas</string>

    <string name="bottom_finder">Descubre</string>
    <string name="bottom_wallet">Guantera</string>
    <string name="bottom_account">Cuenta</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur id varius mauris. Nullam molestie at dolor a auctor. Phasellus elementum et urna id scelerisque. Vestibulum velit enim, porttitor eu leo in, rutrum ornare mauris. Curabitur convallis dignissim sem, eu placerat purus egestas ac. Sed ac pharetra est. Maecenas varius mattis massa a eleifend. Aliquam ut ligula ac elit porta sollicitudin. Etiam a cursus nibh. Suspendisse eget ornare purus. Aliquam eu tellus in leo rutrum auctor. Phasellus gravida neque non quam semper, volutpat faucibus quam egestas. Vestibulum viverra urna vitae pharetra iaculis. Ut bibendum interdum lacus eget porttitor. In accumsan aliquam elit vitae ultrices. Morbi tincidunt vel nulla ut placerat. Sed a felis et enim imperdiet ornare. Nulla metus lacus, pharetra vitae facilisis et, posuere ac massa. Donec purus erat, cursus at egestas in, interdum et odio. Vivamus nec neque suscipit, gravida lorem sed, posuere quam. Cras vehicula magna risus. Integer non sagittis ipsum. Duis facilisis nisi sed augue feugiat interdum. Vivamus vel vulputate ex. Sed egestas euismod odio at posuere. Aenean auctor condimentum diam, id interdum nunc sollicitudin at. Nunc porttitor sem mi, vel suscipit urna cursus consequat. Duis pulvinar posuere volutpat. Morbi eu quam molestie, pellentesque dui quis, lacinia lacus. Nulla finibus eget neque vitae luctus. Sed faucibus semper sollicitudin. Etiam commodo, velit sed vulputate commodo, nisl augue lobortis ex, eu dignissim leo risus a nisl. Quisque scelerisque convallis ipsum, in volutpat metus volutpat at. Fusce volutpat sagittis ligula. Aliquam lacinia mi vel laoreet blandit. Phasellus quis augue vitae massa vulputate interdum. Morbi et lacinia tortor, ut dictum est. Integer at tellus enim. Donec porttitor mi nisl, vitae venenatis arcu faucibus sed. Vivamus nisi felis, pulvinar at est sit amet, elementum tristique nulla. Integer non vestibulum enim, sed rutrum sapien. Etiam mattis convallis nisl et porta. Cras tempus finibus consectetur. Nam blandit lorem sed commodo volutpat. Ut risus nisi, iaculis eu lorem in, viverra mollis odio. Aenean in sem dui. Nunc ornare tortor vitae eros auctor faucibus. Curabitur ex risus, sagittis eget commodo nec, scelerisque at enim. Cras interdum nec nisl ac venenatis. In molestie pharetra pulvinar. Quisque molestie in justo sit amet dictum. Donec molestie augue et condimentum dictum. Praesent vestibulum felis feugiat, vehicula erat et, ultrices turpis. Curabitur vitae nunc at nulla dignissim molestie. Curabitur a euismod tellus. Morbi nec diam ut nisl sollicitudin rutrum at sed orci. Maecenas pellentesque vestibulum metus, eu consequat massa tempus a. Morbi ac urna eu nisi commodo tincidunt nec eget ipsum. Aliquam vitae ex quis erat imperdiet bibendum at vel libero. Phasellus consectetur porttitor sapien, sed posuere urna dapibus in. Mauris ante lorem, placerat ut dictum eu, varius ut ligula.</string>
    <string name="mail_us_to">Escríbenos a</string>
    <string name="call_us_to">Llámanos a</string>
    <string name="email_address_contact">totallylegitemail@realdomain.com</string>
    <string name="phone_number_contact">+57 7763 9882</string>

</resources>
