<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_fragments"
        android:background="@android:color/white">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_round_corners_menus"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="40dp"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputCurrentPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:passwordToggleEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_current_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/current_password"
                    android:drawableStart="@drawable/ic_lock_outline_black"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:passwordToggleEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    android:drawableStart="@drawable/ic_lock_outline_black"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputRepeatNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:passwordToggleEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_repeat_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/repeat_new_password"
                    android:drawableStart="@drawable/ic_lock_outline_black"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
            android:id="@+id/buttonAccept"
            style="@style/FormsButtonStyle"
            android:text="@string/accept"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:paddingStart="46dp"
            android:paddingEnd="46dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>