<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:focusable="true"
        android:focusableInTouchMode="true">

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_percent=".30"
            android:orientation="horizontal"/>

    <TextView
            android:text="Un patito bien mamalon :v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textView2"/>

    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:fontFamily="@font/poppins_extrabolditalic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            android:id="@+id/textView2"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_email"
                android:textColor="@android:color/white"
                android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColorHint="@android:color/white"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/inputEmail"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_password"
                android:textColor="@android:color/white"
                android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:text="@string/login_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_one_regular"
            app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:padding="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>