<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent" android:layout_height="match_parent"
             android:padding="@dimen/margin_fragments"
             tools:context=".myaccount.SettingsFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="40dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@drawable/shape_round_corners_menus">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/textView_change_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/change_password"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_keyboard_arrow_right_blue"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/textView_change_password"
                        app:layout_constraintBottom_toBottomOf="@id/textView_change_password"/>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/greyLine"
                        android:layout_marginTop="12dp"
                        app:layout_constraintTop_toBottomOf="@id/textView_change_password"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/textView_finger_print"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/finger_print"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                        android:id="@+id/textView_finger_print_auth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/auth_biometrics_finger"
                        android:textColor="@android:color/darker_gray"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textView_finger_print"/>

                <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="@id/textView_finger_print"
                        app:layout_constraintBottom_toBottomOf="@id/textView_finger_print_auth"
                        app:layout_constraintEnd_toEndOf="parent"/>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/greyLine"
                        android:layout_marginTop="6dp"
                        app:layout_constraintTop_toBottomOf="@id/textView_finger_print_auth"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>