<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_fragments"
        android:background="@android:color/white">

    <LinearLayout
            android:id="@+id/linearLayout_faq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/shape_round_corners_menus"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faq_title"
                android:textSize="18sp"
                android:textStyle="bold"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="@color/greyLine"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:padding="10dp">

            <WebView
                    android:id="@+id/faqWebView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/linearLayout_mail"
            app:layout_constraintTop_toBottomOf="@id/linearLayout_faq"
            tools:visibility="visible">

        <TextView
                android:id="@+id/textView_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Escribenos a:"/>

        <TextView
                android:id="@+id/textView_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="totallylegitemail@realdomain.com" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout_mail"
            android:layout_width="130dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center_horizontal|bottom"
            android:background="@drawable/shape_round_corners_items"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/linearLayout_call">

        <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_mail_outline_blue"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/faq_mail"
                android:layout_marginBottom="12dp"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout_call"
            android:layout_width="130dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center_horizontal|bottom"
            android:background="@drawable/shape_round_corners_items"
            app:layout_constraintBottom_toBottomOf="@id/linearLayout_mail"
            app:layout_constraintTop_toTopOf="@id/linearLayout_mail"
            app:layout_constraintStart_toEndOf="@id/linearLayout_mail"
            app:layout_constraintEnd_toEndOf="parent">

        <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_phone_in_talk_blue"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/faq_call"
                android:layout_marginBottom="12dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>